JumpScript/tests/baselines/reference/symbolProperty44.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty44.jump(2,9): error TS2300: Duplicate identifier '[Symbol.hasInstance]'.
tests/cases/conformance/es6/Symbols/symbolProperty44.jump(5,9): error TS2300: Duplicate identifier '[Symbol.hasInstance]'.


==== tests/cases/conformance/es6/Symbols/symbolProperty44.jump (2 errors) ====
    class C {
        get [Symbol.hasInstance]() {
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '[Symbol.hasInstance]'.
            return "";
        }
        get [Symbol.hasInstance]() {
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '[Symbol.hasInstance]'.
            return "";
        }
    }